--- a/.gitignore
+++ b/.gitignore
@@ -531,5 +531,5 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
-
+.vscode
 # End of https://www.gitignore.io/api/java,eclipse,intellij,visualstudio,visualstudiocode
